--- a/ProyectoAnalisis2G8/ProyectoAnalisis2G8.csproj
+++ b/ProyectoAnalisis2G8/ProyectoAnalisis2G8.csproj
@@ -163,6 +163,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="styles\globalStyle.css" />
+    <Content Include="styles\StyleSheet1.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
